--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ add_executable(p1_2_server p1_2_server.c info.h server.c server.h)
 add_executable(p1_2_client info.h server.c server.h  p1_2_client.c client.c client.h)
 add_executable(p1_3_server p1_3_server.c info.h server.c server.h)
 add_executable(p1_3_client info.h server.c server.h  p1_3_client.c client.c client.h)
+add_executable(p3_8_server p3_8_server.c info.h server.c server.h)
+add_executable(p3_8_client info.h server.c server.h  p3_8_client.c client.c client.h)
 add_executable(p2_4 p2_4.c)
 target_link_libraries (p2_4 Threads::Threads)
 add_executable(p2_5 p2_5.c info.h)
